fix(DHIS2-20555): fix double scroll on long and wide custom forms

--- a/public/legacy-custom-forms/css/dhis-web-dataentry.css
+++ b/public/legacy-custom-forms/css/dhis-web-dataentry.css
@@ -30,7 +30,7 @@
 
 #contentDiv
 {
-  margin-bottom: 8px;
+  padding-bottom: 8px;
 }
 
 #completenessDiv
